# geneticArtC

./: .gitignore  CMakeLists.txt  README.md  TODO.md  display_folder_tree.sh  doxygen_geneticart_config  doxygen_nuklear_config  genetic_art.c  genetic_art.h  genetic_structs.c  genetic_structs.h  main.c
.cache/clangd/index/: embedded_font.h.B189FF4F118A9845.idx  ga_renderer.c.022CA930D14DF886.idx  ga_renderer.h.82F3D01F4BC50DCC.idx  genetic_art.c.29466150E64CF13F.idx  genetic_art.c.C3D4D054DDBB74C6.idx  genetic_art.h.1673384FDB1A78A8.idx  genetic_art.h.4A35AC7AD7034E98.idx  genetic_art.h.7389BC61AE1E96A1.idx  genetic_structs.c.2C5D3D599BC78176.idx  genetic_structs.h.076272B5EED61990.idx  genetic_structs.h.4CC54AC0F5E1B7AF.idx  main.c.B6BB46E1D56CEC79.idx  main.c.F32761574933BC64.idx  nuklear.c.AE9874481B18856C.idx  nuklear.h.EC2B28331327E869.idx  nuklear_sdl_renderer.c.1D740ACAE3CB5F50.idx  nuklear_sdl_renderer.h.1ACB5EFC807A23D0.idx  nuklear_sdl_renderer.h.74E04503483F4E37.idx
Documentation/GeneticArt/html/: _2home_2react_2Desktop_2Echo_ai_2geneticArtC_2includes_2software_rendering_2main_runtime_8h-example.html  _2home_2react_2Desktop_2Echo_ai_2geneticArtC_2includes_2software_rendering_2nuklear_sdl_renderer_8h-example.html  annotated.html  async__file__ops_8h_source.html  bmp__validator_8c.html  bmp__validator_8c__incl.map  bmp__validator_8c__incl.md5  bmp__validator_8h.html  bmp__validator_8h__dep__incl.map  bmp__validator_8h__dep__incl.md5  bmp__validator_8h__incl.map  bmp__validator_8h__incl.md5  bmp__validator_8h_source.html  classes.html  config_8h_source.html  dir_000004_000002.html  dir_000005_000003.html  dir_09e761304027c904456130627fd4dcf5.html  dir_09e761304027c904456130627fd4dcf5_dep.map  dir_09e761304027c904456130627fd4dcf5_dep.md5  dir_412f5e5b35ec82ba57b115b637bd6f9b.html  dir_412f5e5b35ec82ba57b115b637bd6f9b_dep.map  dir_412f5e5b35ec82ba57b115b637bd6f9b_dep.md5  dir_55692ef510ff444e8c557b1cc4f5d73c.html  dir_55692ef510ff444e8c557b1cc4f5d73c_dep.map  dir_55692ef510ff444e8c557b1cc4f5d73c_dep.md5  dir_60ee56476b7426bb3a28b170a4bd3bb2.html  dir_60ee56476b7426bb3a28b170a4bd3bb2_dep.map  dir_60ee56476b7426bb3a28b170a4bd3bb2_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_bd3a6fb9698255615dadfa28317564c7.html  dir_bd3a6fb9698255615dadfa28317564c7_dep.map  dir_bd3a6fb9698255615dadfa28317564c7_dep.md5  dir_e9cd0ec12b89af350dd599ec653c5a09.html  dir_e9cd0ec12b89af350dd599ec653c5a09_dep.map  dir_e9cd0ec12b89af350dd599ec653c5a09_dep.md5  dir_ff364d75f9f0758e8137acc5e4441ecb.html  dir_ff364d75f9f0758e8137acc5e4441ecb_dep.map  (+97 more)
Documentation/GeneticArt/html/search/: all_1.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+26 more)
Documentation/Nuklear/html/: Context.html  Drawing.html  Font.html  Groups.html  Input.html  Layouting.html  Memory.html  Properties.html  Stack.html  Text.html  Tree.html  Window.html  annotated.html  classes.html  dir_09e761304027c904456130627fd4dcf5.html  dir_de2c503bf782443660cf8fa97d9ec4bd.html  dir_de2c503bf782443660cf8fa97d9ec4bd_dep.map  dir_de2c503bf782443660cf8fa97d9ec4bd_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  graph_legend.html  index.html  menudata.js  nuklear_8h.html  pages.html  structnk__allocator-members.html  structnk__allocator.html  structnk__buffer-members.html  structnk__buffer.html  structnk__buffer__marker-members.html  structnk__buffer__marker.html  structnk__chart-members.html  structnk__chart.html  structnk__chart__slot-members.html  (+161 more)
Documentation/Nuklear/html/search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_5.js  all_c.js  all_e.js  all_f.js  searchdata.js
includes/: config.h  embedded_font.h  ga_renderer.h  genetic_art.h  genetic_structs.h  nuklear_sdl_renderer.h
includes/SDL/: .SDL.h.swp
includes/async_io/: async_file_ops.h
includes/fonts_as_header/: embedded_font.h
includes/genetic_algorithm/: genetic_art.h  genetic_structs.h
includes/genetic_algorythm/: genetic_art.h
includes/software_rendering/: ga_renderer.h  main_runtime.h  nuklear_sdl_renderer.h
includes/tools/: system_tools.h
includes/validators/: bmp_validator.h
src/: async_file_ops.c  bmp_validator.c  embedded_font.c  ga_renderer.c  genetic_art.c  genetic_structs.c  main.c  main_runtime.c  nuklear.c  nuklear_sdl_renderer.c  system_tools.c
